--- a/main.css
+++ b/main.css
@@ -3,7 +3,14 @@ body {
     color: #ffffff;
 }
 
-section {
+.row .todo-list {
+    margin-top: 20px;
+    padding: 20px;
+    max-height: 1200px;
+    overflow-y: scroll;
+}
+
+.row .finished-todos {
     margin-top: 20px;
     padding: 20px;
     max-height: 1200px;
@@ -191,6 +198,7 @@ a:hover, .dropdown-item:hover, .navbar .nav-item .nav-link:hover {
 .todo-green .card-header {
     background-color: #6db33f;
 }
+
 .todo-white .card-header {
     background-color: #ffffff;
 }
@@ -208,4 +216,8 @@ a:hover, .dropdown-item:hover, .navbar .nav-item .nav-link:hover {
 footer a.fa {
     text-decoration: none;
     font-size: x-large;
+}
+.embed-responsive {
+    max-height: 400px;
+    max-width: 300px;
 }
